--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,21 +8,21 @@ body:
       options:
         - label: This is not a [support issue or a question](https://old.reddit.com/r/uBlockOrigin/)
           required: true
-        - label: I performed a [cursory search of the issue tracker](https://github.com/uBlockOrigin/uAssets/issues) to avoid opening a duplicate issue
+        - label: I performed a [cursory search of the issue tracker](https://github.com/airdcpp/airdcpp-windows/issues) to avoid opening a duplicate issue
           required: true
-        - label: I am running the latest version of uBlock Origin
+        - label: I am running the latest version of AirDC++
           required: true
     
-  - type: checkboxes
-    attributes:
-      label: I tried to reproduce the issue when...
-      options:
-        - label: uBO is the only extension
-          required: true
-        - label: uBO with default lists/settings
-          required: true
-        - label: using a new, unmodified browser profile
-          required: true
+#  - type: checkboxes
+#    attributes:
+#      label: I tried to reproduce the issue when...
+#      options:
+#        - label: uBO is the only extension
+#          required: true
+#        - label: uBO with default lists/settings
+#          required: true
+#        - label: using a new, unmodified browser profile
+#          required: true
 
   - type: textarea
     attributes:
