--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
       label: Prerequisites
       description: To rule out invalid issues, confirm and check each one of the checkboxes.
       options:
-        - label: This is not a [support issue or a question](https://old.reddit.com/r/uBlockOrigin/)
+        - label: This is not a [support issue or a question](https://github.com/airdcpp/airdcpp-windows/discussions)
           required: true
         - label: I performed a [cursory search of the issue tracker](https://github.com/airdcpp/airdcpp-windows/issues) to avoid opening a duplicate issue
           required: true
@@ -47,35 +47,40 @@ body:
 
   - type: textarea
     attributes:
-      label: Screenshot(s)
+      label: Expected behavior
       description: |
-        Screenshot(s) for **difficult to describe visual issues are mandatory**. 
-        Post **links** instead of inline images for screenshots containing **adult material**.
-    validations:
-      required: false
-
-  - type: input
-    attributes:
-      label: uBlock Origin version
-    validations:
-      required: true
-
-  - type: input
-    attributes:
-      label: Browser name and version
+        Tell us what should happen.
     validations:
       required: true
 
   - type: textarea
     attributes:
-      label: Settings
-      description: List all the changes you've made to uBO's default settings here
-      placeholder: |
-        - Change 1
-        - Change 2
-        - Change 3
+      label: Actual behavior
+      description: |
+        Tell us what happens instead.
     validations:
-      required: true  
+      required: true
+
+- type: textarea
+    attributes:
+      label: Screenshot(s)
+      description: |
+        Add screenshot(s) to describe visual issues. 
+    validations:
+      required: false
+
+  - type: input
+    attributes:
+      label: AirDC++ version and architecture (x86 or x64)
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: Operating System name, version and architecture
+      placeholder: E.g. Windows 10 21H2 x64
+    validations:
+      required: true
 
   - type: textarea
     attributes:
