--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
-name: Report Filter Issues
-description: file a filterlist issue
+name: Bug report
+description: Create a report to help us improve
 body:
   - type: checkboxes
     attributes:
@@ -61,7 +61,7 @@ body:
     validations:
       required: true
 
-- type: textarea
+  - type: textarea
     attributes:
       label: Screenshot(s)
       description: |
