--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,32 +10,8 @@ body:
           required: true
         - label: I performed a [cursory search of the issue tracker](https://github.com/airdcpp/airdcpp-windows/issues) to avoid opening a duplicate issue
           required: true
-        - label: I am running the latest version of AirDC++ ![build](https://img.shields.io/github/release/airdcpp/airgit.svg?label=AirDC%2B%2B&maxAge=3600&logo=windows)
+        - label: I am running the latest version of AirDC++
           required: true
-    
-#  - type: checkboxes
-#    attributes:
-#      label: I tried to reproduce the issue when...
-#      options:
-#        - label: uBO is the only extension
-#          required: true
-#        - label: uBO with default lists/settings
-#          required: true
-#        - label: using a new, unmodified browser profile
-#          required: true
-
-  - type: textarea
-    attributes:
-      label: URL(s) where the issue occurs
-      description: |
-        At least one URL for a web page where the clearly described issue occurs is **mandatory**. 
-        The backticks (`) surrounding the URLs are important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
-      placeholder: |
-        `https://example.com`
-        `https://example.org`
-        `https://example.net`
-    validations:
-      required: true
 
   - type: textarea
     attributes:
