--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -40,7 +40,7 @@ body:
 
   - type: textarea
     attributes:
-      label: Steps to reproduce the behavior:
+      label: Steps to reproduce the behavior
       description: |
         Tell us what happens instead.
       placeholder: |
