--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -41,8 +41,7 @@ body:
   - type: textarea
     attributes:
       label: Steps to reproduce the behavior
-      description: |
-        Tell us what happens instead.
+      description: Tell us what happens instead.
       placeholder: 1.
     validations:
       required: false
