--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -44,7 +44,9 @@ body:
       label: Steps to reproduce the behavior
       description: |
         Step by step.
-      placeholder: 1.
+      placeholder: |
+        1.
+        2.
     validations:
       required: false
 
