--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -59,9 +59,9 @@ body:
 
   - type: textarea
     attributes:
-      label: exceptioninfo.txt
+      label: Crash log
       description: |
-        When AirDC++ crash it will sometimes create an exceptioninfo.txt. Open it and verify it is the correct date and time of the crash.
+        When AirDC++ crash it will sometimes create an `exceptioninfo.txt`. Open it and verify it is the correct date and time of the crash.
         If your client won't create any exceptioninfo.txt you can read more [here](https://github.com/Sopor/airdcpp-windows/wiki/Client-hangs-(deadlock)#getting-information-from-a-frozen-or-hung-client) how to get information out of a frozen client.
       placeholder: Paste all text from exceptioninfo.txt here or from WinDbg
       render: shell
