--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,6 +14,7 @@ body:
           required: true
         - label: I am running the latest version of AirDC++ [version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=version&maxAge=3600)
           required: true
+          render: markdown
 
   - type: textarea
     attributes:
