--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -14,13 +14,11 @@ body:
           required: true
         - label: I am running the latest version of AirDC++
           required: true
-          value: |
-            ![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=version&maxAge=3600)
 
-#  - type: markdown
-#    attributes:
-#      value: |
-#        ![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=version&maxAge=3600)
+  - type: markdown
+    attributes:
+      value: |
+        ![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=version&maxAge=3600)
 
   - type: textarea
     attributes:
