--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -18,7 +18,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=Latest%20version&maxAge=3600)
+        ![versionnnnnnnnnnnnnnnnnnnnnnnnnnnn](https://img.shields.io/github/release/airdcpp/airgit.svg?label=Latest%20version&maxAge=3600)
 
   - type: textarea
     attributes:
