--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -68,6 +68,13 @@ body:
       description: |
         When AirDC++ crash it will sometimes create an `exceptioninfo.txt`. Open it and verify it is the correct date and time of the crash.
         If your client won't create any exceptioninfo.txt you can read more [here](https://github.com/Sopor/airdcpp-windows/wiki/Client-hangs-(deadlock)#getting-information-from-a-frozen-or-hung-client) how to get information out of a frozen client.
+      value: |
+        <details>
+        <summary>Log file</summary>
+
+        <!-- drag-and-drop log file here -->
+
+        </details>
       placeholder: Paste all text from exceptioninfo.txt here or from WinDbg
       render: shell
     validations:
