--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -56,9 +56,16 @@ body:
 
   - type: textarea
     attributes:
-      label: Screenshot(s)
+      label: Screenshot
       description: |
-        Add screenshot(s) to describe visual issues. 
+        Add screenshot(s) to describe visual issues.
+      value: |
+        <details>
+        <summary>Screenshot(s)</summary>
+
+        <!-- drag-and-drop screenshot here -->
+
+        </details>
     validations:
       required: false
 
@@ -67,15 +74,15 @@ body:
       label: Crash log
       description: |
         When AirDC++ crash it will sometimes create an `exceptioninfo.txt`. Open it and verify it is the correct date and time of the crash.
-        If your client won't create any exceptioninfo.txt you can read more [here](https://github.com/Sopor/airdcpp-windows/wiki/Client-hangs-(deadlock)#getting-information-from-a-frozen-or-hung-client) how to get information out of a frozen client.
+        If your client won't create any exceptioninfo.txt you can read more **[here](https://github.com/Sopor/airdcpp-windows/wiki/Client-hangs-(deadlock)#getting-information-from-a-frozen-or-hung-client)** how to get information out of a frozen client.
       value: |
         <details>
         <summary>Log file</summary>
 
-        <!-- drag-and-drop log file here -->
+        <!-- drag-and-drop exceptioninfo.txt or WinDbg logs here -->
 
         </details>
-      placeholder: Paste all text from exceptioninfo.txt here or from WinDbg
+      placeholder: Paste all text from exceptioninfo.txt here.
       render: shell
     validations:
       required: false
@@ -83,7 +90,7 @@ body:
   - type: input
     attributes:
       label: AirDC++ version and architecture (x86 or x64)
-      placeholder: e.g. 4.11 x64
+      placeholder: e.g. 4.20 x64
     validations:
       required: true
 
