--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -66,6 +66,7 @@ body:
         <!-- drag-and-drop screenshot here -->
 
         </details>
+      placeholder: Add screenshot here.
     validations:
       required: false
 
