--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -18,7 +18,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=Latest%20version&maxAge=3600)
+        [![version](https://img.shields.io/github/release/airdcpp/airgit.svg?label=Latest%20version&maxAge=3600 "Click to get latest version of AirDC++")](https://github.com/airdcpp/airdcpp-windows/releases)
 
   - type: textarea
     attributes:
