--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -84,7 +84,7 @@ body:
 
         </details>
       placeholder: Paste all text from exceptioninfo.txt here.
-      render: shell
+      <!-- render: shell -->
     validations:
       required: false
 
