--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -1,6 +1,6 @@
-name: Bug report
+name: 🐛 Bug report
 description: Create a report to help us improve
-title: "[Bug]: <title>"
+title: "🐛 [Bug]: <title>"
 labels: ["bug", "triage"]
 body:
   - type: checkboxes
