--- a/.github/ISSUE_TEMPLATE/2_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2_feature_request.yml
@@ -1,6 +1,6 @@
-name: Feature request
+name: 💡 Feature request
 description: Create a report to help us improve
-title: "[Feature request]: "
+title: "💡 [Feature request]: "
 labels: ["feature request"]
 body:
   - type: checkboxes
@@ -11,8 +11,6 @@ body:
         - label: This is not a [support issue or a question](https://github.com/airdcpp/airdcpp-windows/discussions)
           required: true
         - label: I performed a [cursory search of the issue tracker](https://github.com/airdcpp/airdcpp-windows/issues) to avoid opening a duplicate issue
-          required: true
-        - label: I am running the latest version of AirDC++
           required: true
 
   - type: textarea
@@ -41,46 +39,11 @@ body:
 
   - type: textarea
     attributes:
-      label: Steps to reproduce the behavior if needed
-      placeholder: |
-        1.
-        2.
-        3.
-    validations:
-      required: false
-
-  - type: textarea
-    attributes:
       label: Screenshot(s)
       description: |
         Add screenshot(s) to describe visual issues. 
     validations:
       required: false
-
-  - type: textarea
-    attributes:
-      label: exceptioninfo.txt
-      description: |
-        When AirDC++ crash it will sometimes create an exceptioninfo.txt. Open it and verify it is the correct date and time of the crash.
-        If your client won't create any exceptioninfo.txt you can read more [here](https://github.com/Sopor/airdcpp-windows/wiki/Client-hangs-(deadlock)#getting-information-from-a-frozen-or-hung-client) how to get information out of a frozen client.
-      placeholder: Paste all text from exceptioninfo.txt here or from WinDbg
-      render: shell
-    validations:
-      required: false
-
-  - type: input
-    attributes:
-      label: AirDC++ version and architecture (x86 or x64)
-      placeholder: e.g. 4.11 x64
-    validations:
-      required: true
-
-  - type: input
-    attributes:
-      label: Operating System name, version and architecture
-      placeholder: e.g. Windows 10 21H2 x64
-    validations:
-      required: true
 
   - type: textarea
     attributes:
