--- a/.github/ISSUE_TEMPLATE/2_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2_feature_request.yml
@@ -1,5 +1,5 @@
 name: 💡 Feature request
-description: Create a report to help us improve
+description: Create a report for a new feature request
 title: "💡 [Feature request]: "
 labels: ["feature request"]
 body:
